update 23 files and delete 1 file

--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -175,3 +175,10 @@ th#date {
   align-items: center;
   gap: 0.75rem;
 }
+
+.km-note-preview{
+  float: right;
+}
+.km-user-note-modal{
+  min-width: 400px;;
+}
