--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -9,7 +9,7 @@
 .woocommerce-checkout .uael-form.uael-login-form input[type="text"]:focus,
 .woocommerce-checkout .uael-form.uael-login-form input[type="password"]:focus{border: 1px solid black;}
 
-
+.shopengine-checkout .shopengine-multistep-enabled>.elementor-container{overflow: unset!important;}
 
 .woocommerce-checkout .elementor-widget-km_checkout_billing_adress .shipping_address{margin-top:40px;}
 .woocommerce-checkout .elementor-widget-km_checkout_billing_adress .woocommerce-billing-fields__field-wrapper{margin-top:40px;}
@@ -18,8 +18,6 @@
 
 
 .woocommerce-checkout .elementor-widget-km_delivery_conditions h4{font-size: 18px;font-family: "Arca Majora 3", Sans-serif;}
-.woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required{}
-.woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required input[type="checkbox"]{}
 .woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required label{font-style:italic;}
 .woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required{color: #262626;}
 .woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required input[type="checkbox"]{display:none !important;}
@@ -27,15 +25,15 @@
 .woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required label:before{font-size: calc( 20px / 1.2 );width: 20px;height: 20px;background-color: #FFFFFF;border-color: #A5AFB8;border-width: 1px;border-style: solid;border-radius: 4px;content: '';text-align: center;display: inline-block;;vertical-align: middle;-webkit-box-sizing: content-box;-moz-box-sizing: content-box;box-sizing: content-box;margin-right: 10px;}
 .woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required input[type="checkbox"]:checked + label:after {content: '✔';position: absolute;top: 0;left: 5px;color: black;font-size: 20px;}
 .woocommerce-checkout .elementor-widget-km_delivery_conditions p.validate-required label a{color:#BE9D68;}
-.woocommerce-checkout .step-shipping{}
-.woocommerce-checkout .step-payment:hover,.woocommerce-checkout .step-shipping:hover{cursor:pointer;}
+.woocommerce-checkout .step-cart:hover,.woocommerce-checkout .step-payment:hover,.woocommerce-checkout .step-shipping:hover{cursor:pointer;}
 .woocommerce-checkout .step-shipping:not(.active) .elementor-element-populated.lazyloaded{--e-bg-lazyload: url(/wp-content/uploads/2023/08/etape-valide.png) !important;}
 .woocommerce-checkout .step-shipping:not(.active) .elementor-widget-heading:first-child .elementor-heading-title{display:none;}
 .woocommerce-checkout .step-shipping:not(.active) .elementor-widget-heading:nth-child(2) .elementor-heading-title{color:#BE9D68 !important;}
+.woocommerce-checkout .step-cart:hover:hover a{color:#262626 !important;}
 .woocommerce-checkout .step-payment:hover .elementor-widget-heading:nth-child(2) .elementor-heading-title{color:#262626 !important;}
 .woocommerce-checkout .step-payment.active .elementor-widget-heading:nth-child(2) .elementor-heading-title{color:#262626 !important;}
 
-.conteneur-recapitulatif{display: block !important;position: -webkit-sticky;position: sticky;top: 0;z-index: 10;}
+.conteneur-recapitulatif{display: block !important;position:-webkit-sticky!important;position:sticky!important;top:20px;z-index: 10;height: fit-content;}
 .conteneur-recapitulatif .elementor-element-populated{box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);width: 320px;padding: 24px 30px !important;border-radius:3px;height: auto;display:block;}
 .conteneur-recapitulatif .woocommerce-checkout-review-order tr th{color:#262626 !important;}
 .conteneur-recapitulatif .woocommerce-checkout-review-order tr.cart_item td.product-name{line-height:1.2em !important;}
@@ -339,8 +337,9 @@ Virement : /wp-content/uploads/2023/12/rassurance-paiement-virement-bancaire.jpg
 .woocommerce-checkout .moyen-paiement #payment li.payment_method_etransactions_std_card_1 img{display:none;}
 .woocommerce-checkout .moyen-paiement #payment li.payment_method_etransactions_std_card_1 div.payment_method_etransactions_std_card_1 p{margin-top: 30px;}
 
-
-
+.woocommerce-checkout-review-order-table th {
+    margin-right:10px;
+}
 
 @media (max-width: 768px) {
     /* Checkout */
