--- a/assets/css/tonnage-calculator.css
+++ b/assets/css/tonnage-calculator.css
@@ -12,7 +12,7 @@
 .densities {
     max-width: 1250px;
     width: 100%;
-    font-family: 'Lato', sans-serif;
+    font-family: Lato, sans-serif;
     font-style: italic;
     font-weight: 500;
     font-size: 16px;
@@ -58,7 +58,7 @@
     width: fit-content;
     position: relative;
     z-index: 0;
-    font-family: 'Arca Majora 3', sans-serif;
+    font-family: 'Arca Majora 3', Lato, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -92,7 +92,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    font-family: 'Lato', sans-serif;
+    font-family: Lato, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -116,7 +116,7 @@
 }
 
 .recommandation, .density_body {
-    font-family: 'Lato', sans-serif;
+    font-family: Lato, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -175,7 +175,7 @@ label.densite {
     position: absolute;
     max-width: 205px;
     padding: 0 10px 30px 15px;
-    font-family: 'Lato', sans-serif;
+    font-family: Lato, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -220,7 +220,7 @@ label.densite {
 
 .result_weight, .result_longueur {
     margin-top: 24px;
-    font-family: 'Lato', sans-serif;
+    font-family: Lato, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -230,7 +230,7 @@ label.densite {
 
 .result_bag, .result_largeur, .result_epaiseur {
     margin-top: 8px;
-    font-family: 'Lato', sans-serif;
+    font-family: Lato, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -252,7 +252,7 @@ h3.false_h3 {
 
 span#reset_tonnage_calculator {
     margin-top: 24px;
-    font-family: 'Lato', sans-serif;
+    font-family: Lato, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
